prusti-tests/tests/cargo_verify/prusti_toml/output.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> src/lib.rs:3:11
  |
3 | #[ensures(false)]
  |           ^^^^^
  |
note: the error originates here
 --> src/lib.rs:4:1
  |
4 | pub fn test1() {}
  | ^^^^^^^^^^^^^^^^^

error: [Prusti: verification error] the asserted expression might not hold
 --> src/lib.rs:7:5
  |
7 |     assert!(false);
  |     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] assertion might fail with "attempt to subtract with overflow"
  --> src/lib.rs:11:21
   |
11 |     let _y: usize = 1-x;
   |                     ^^^

error: could not compile `prusti_toml` (lib) due to 3 previous errors
